--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   get: ^4.6.5
   font_awesome_flutter: ^10.3.0
+  google_fonts: ^3.0.1
   flutter:
     sdk: flutter
 
