--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  get: ^4.6.5
+  go_router: ^6.0.1
   font_awesome_flutter: ^10.3.0
   google_fonts: ^3.0.1
   flutter:
