--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   go_router: ^6.0.1
   font_awesome_flutter: ^10.3.0
   google_fonts: ^3.0.1
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
 
