--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   equatable: ^2.0.5
   dio: ^4.0.6
   bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  get_it: ^7.2.0
   flutter:
     sdk: flutter
 
