--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   get_it: ^7.2.0
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
 
